# crates/imgworker/Cargo.toml — the ConvertIA image-worker (pkg `convertia-imgworker`).
#
# A SEPARATE first-party workspace member — NOT linked into the MIT core (spec §0.9/§2.12/§3.5.5):
# image decode/encode runs in this short-lived externalBin subprocess so a hostile-image
# memory-corruption exploit (libvips/libheif/librsvg, the T1 headline threat) is process-isolated like
# every other engine. It links the §3.6.1 copyleft C libs (libvips LGPL, libheif/libde265 LGPL-3.0,
# librsvg, ImageMagick) by AGGREGATION; the G53 core-closure walk proves they never reach
# `convertia-core`. The dir is `crates/imgworker/` because the G29 unsafe allow-list pins the one
# permitted FFI module at `crates/imgworker/src/ffi.rs`. At P1.6 it is a compile-only stub member; the
# libvips/libheif link work + the FFI module are P4/P5.
[package]
name = "convertia-imgworker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
